correcting circleCi