@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
+
+    <groupId>guru.springframework</groupId>
+    <artifactId>sfp-pet-clinic</artifactId>
+    <version>0.0.3-SNAPSHOT</version>
+
     <modules>
         <module>pet-clinic-data</module>
         <module>pet-clinic-web</module>
     </modules>
+
+    <packaging>pom</packaging>
+
+    <name>sfp-pet-clinic</name>
+    <description>SFG Pet Clinic Project</description>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.1.RELEASE</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
-    <groupId>guru.springframework</groupId>
-    <artifactId>sfp-pet-clinic</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
-    <name>sfp-pet-clinic</name>
-    <description>SFG Pet Clinic Project</description>
+
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -42,6 +48,34 @@
                    <goal>install</goal>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                </configuration>
+           </plugin>
+           <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-surefire-plugin</artifactId>
+               <version>2.22.0</version>
+               <configuration>
+                   <argLine>
+                       --illegal-access=permit
+                   </argLine>
+               </configuration>
+           </plugin>
+           <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-failsafe-plugin</artifactId>
+               <version>2.22.0</version>
+               <configuration>
+                   <argLine>
+                       --illegal-access=permit
+                   </argLine>
+               </configuration>
+               <executions>
+                   <execution>
+                       <goals>
+                           <goal>integration-test</goal>
+                           <goal>verify</goal>
+                       </goals>
+                   </execution>
+               </executions>
            </plugin>
        </plugins>
    </build>
